# kaja-html-macro

./: Cargo.toml  README.md
src/: htmlcontentbuilder.rs  htmllexer.rs  htmlquotes.rs  lib.rs
test-fail-messages/include/: Cargo.toml  main.rs
test-fail-messages/start/: main.rs
test-fail-messages/structmember/: Cargo.toml  main.rs
test-fail-messages/variable/: Cargo.toml  main.rs
tests/: injection.rs  interleaved.rs  other.rs  tag.rs
