[package]
name = "kaja-html-macro"
version = "1.0.2"
edition = "2024"
description = "HTML macro"
license = "MIT"
repository = "https://github.com/johanmattssonm/kaja-html-macro"
readme = "README.md"
keywords = ["html", "web", "macro"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1"
quote = "1"
syn = "2.0.101"
